添加新功能

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "format": "npx ultracite@latest fix",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "npx tsx lib/db/migrate.ts",
+    "db:seed": "npx tsx lib/db/seed.ts",
+    "db:reset": "pnpm run db:migrate && pnpm run db:seed",
     "db:studio": "drizzle-kit studio",
     "db:push": "drizzle-kit push",
     "db:pull": "drizzle-kit pull",
